# testcpp

./: CMakeLists.txt  main.cpp  pasien.sql  readme
